Fix Settings dropdown being behind stats

--- a/public/angular/sass/shared/navbar.scss
+++ b/public/angular/sass/shared/navbar.scss
@@ -16,6 +16,7 @@
 .bg-default {
   background-color: $navbar-green;
   .navbar-nav > li {
+    z-index: 2000;
     > a:hover,
     > a:focus,
     &.active > a,
